--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Energy Optimizer</h1>
+  <h1>Energy Optimizer v1</h1>
   <form (ngSubmit)="onSubmit()">
     <label>
       <a
